# self-copy

./: README.md
new_catkin_ws（graph）/.catkin_tools/profiles/default/: devel_collisions.txt
new_catkin_ws（graph）/devel/: setup.bash  setup.sh
new_catkin_ws（graph）/devel/.private/carla_ackermann_control/: .catkin
new_catkin_ws（graph）/devel/.private/carla_ad_agent/: .rosinstall
new_catkin_ws（graph）/devel/.private/carla_ad_demo/: .catkin
new_catkin_ws（graph）/devel/.private/carla_common/: .catkin
new_catkin_ws（graph）/devel/.private/carla_ros_bridge/: setup.sh
new_catkin_ws（graph）/devel/.private/carla_ros_scenario_runner_types/: .catkin  setup.sh
new_catkin_ws（graph）/devel/.private/carla_spawn_objects/: .catkin
new_catkin_ws（graph）/devel/.private/carla_waypoint_publisher/: .catkin  .rosinstall  setup.sh
new_catkin_ws（graph）/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
new_catkin_ws（graph）/devel/.private/pcl_recorder/: setup.sh
new_catkin_ws（graph）/devel/.private/ros_compatibility/: .catkin  local_setup.sh
new_catkin_ws（graph）/logs/lqr_control/: build.make.003.log.stderr  build.make.006.log.stderr  build.make.014.log.stderr  build.make.017.log.stderr  build.make.035.log.stderr
new_catkin_ws（graph）/logs/ros_viz_tools/: build.make.000.log.stderr
self-copy/new_catkin_ws（graph）/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
self-copy/new_catkin_ws（graph）/src/lqr_control/: CMakeLists.txt
self-copy/new_catkin_ws（graph）/src/lqr_control/include/: map.h
self-copy/new_catkin_ws（graph）/src/lqr_control/src/: lqr_controller.cpp  lqr_controller_node.cpp
(+3482 files in other folders)
